Fix dark mode visuals

--- a/src/index.css
+++ b/src/index.css
@@ -105,11 +105,11 @@
     --secondary: 212 26% 83%;
     --secondary-foreground: 228 84% 4%;
 
-    --muted: 215 16% 46%;
+    --muted: 217 25% 22%;
     --muted-foreground: 215 20% 65%;
 
-    --accent: 228 84% 4%;
-    --accent-foreground: 215 20% 65%;
+    --accent: 217 28% 20%;
+    --accent-foreground: 210 40% 90%;
 
     --destructive: 0 84% 60%;
     --destructive-foreground: 0 85% 97%;
